# gr4-incubator

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap_plugins.sh  generate_plugin_meson.py  meson.build  meson_options.txt
.devcontainer/: devcontainer.json  devcontainer.json.example  devcontainer.json.example-mac
.github/workflows/: ci.yml
algorithm/: main.cpp  meson.build
algorithm/pmt_converter/include/gnuradio-4.0/algorithm/pmt_converter/: pmt_converter.h  pmt_legacy_codec.h
algorithm/pmt_converter/src/: pmt_legacy_codec.cpp
algorithm/pmt_converter/tests/: meson.build  qa_legacy_pmt_codec.cpp
blocks/: CMakeLists.txt  meson.build
blocks/analog/: CMakeLists.txt  meson.build
blocks/analog/include/gnuradio-4.0/analog/: FmDeemphasisFilter.hpp  QuadratureDemod.hpp
blocks/analog/test/: meson.build  qa_QuadratureDemod.cpp
blocks/audio/: CMakeLists.txt  meson.build
blocks/audio/examples/: audio_playback.cpp  meson.build  zmq_loopback.cpp
blocks/audio/include/gnuradio-4.0/audio/: AudioFileSource.hpp  Copy.hpp  RtAudioSink.hpp
blocks/audio/test/: CMakeLists.txt  meson.build  qa_Copy.cpp
blocks/basic/: CMakeLists.txt  meson.build
blocks/basic/benchmarks/: bench_AGC.cpp  bench_AGCChain.cpp  bench_DCBlocker.cpp  bench_MovingAverage.cpp  bench_PeakTagger.cpp
blocks/basic/include/gnuradio-4.0/basic/: AGC.hpp  ComplextoMagPhase.hpp  Converters.hpp  Copy.hpp  DCBlocker.hpp  EndianSwap.hpp  MagPhasetoComplex.hpp  MovingAverage.hpp  PeakDetector.hpp  PeakTagger.hpp  StaticCast.hpp  VectorSink.hpp  VectorSource.hpp
blocks/basic/test/: CMakeLists.txt  meson.build  qa_AGC.cpp  qa_ComplexToMagPhase.cpp  qa_Converters.cpp  qa_Copy.cpp  qa_DCBlocker.cpp  qa_EndianSwap.cpp  qa_MagPhasetoComplex.cpp  qa_MovingAverage.cpp  qa_PeakDetector.cpp  qa_PeakTagger.cpp  qa_StaticCast.cpp  qa_VectorSink.cpp  qa_VectorSource.cpp
blocks/channel/: CMakeLists.txt  meson.build
blocks/channel/include/gnuradio-4.0/channel/: AWGNChannel.hpp  DCOffsetChannel.hpp  FlatFadingChannel.hpp  FrequencyOffsetChannel.hpp  IQImbalanceChannel.hpp  RayleighFadingChannel.hpp  RicianFadingChannel.hpp  SNRSteppedAWGN.hpp
blocks/channel/test/: CMakeLists.txt  meson.build  qa_AWGNChannel.cpp  qa_Converters.cpp  qa_Copy.cpp  qa_DCOffsetChannel.cpp  qa_FlatFadingChannel.cpp  qa_FrequencyOffsetChannel.cpp  qa_IQImbalanceChannel.cpp  qa_RayleighFadingChannel.cpp  qa_RicianFadingChannel.cpp  qa_SNRSteppedAWGN.cpp
blocks/filter/: CMakeLists.txt
blocks/filter/include/gnuradio-4.0/filter/: FirDecimator.hpp
blocks/filter/test/: CMakeLists.txt  qa_FirDecimator.cpp
blocks/http/: CMakeLists.txt  README.md
blocks/http/include/gnuradio-4.0/http/: HttpTimeSeriesSink.hpp
blocks/http/test/: CMakeLists.txt  qa_HttpTimeSeriesSink.cpp
blocks/measure/: CMakeLists.txt  meson.build
blocks/measure/include/gnuradio-4.0/measure/: EVMSink.hpp  HistogramSink.hpp  PowerEstimator.hpp
blocks/measure/test/: CMakeLists.txt  meson.build  qa_EVMSink.cpp  qa_HistogramSink.cpp  qa_PowerEstimator.cpp
blocks/pfb/: ATTRIBUTION.md  CMakeLists.txt  meson.build
blocks/pfb/include/gnuradio-4.0/pfb/: PfbArbResampler.hpp  PfbArbResamplerKernel.hpp  PfbArbResamplerTaps.hpp  PfbFirdes.hpp  PfbOptfir.hpp  PfbRemez.hpp  PfbWindow.hpp
blocks/pfb/test/: meson.build  qa_PfbArbResampler.cpp
blocks/polyphase/: meson.build
blocks/polyphase/include/gnuradio-4.0/polyphase/: PfbArbitraryResampler.hpp
blocks/polyphase/test/: meson.build  qa_PfbArbitraryResampler.cpp
blocks/sigmf/: CMakeLists.txt  README.md  meson.build
blocks/sigmf/include/gnuradio-4.0/sigmf/: SigMfMetadata.hpp  SigMfPathResolver.hpp  SigMfSource.hpp
blocks/sigmf/include/gnuradio-4.0/sigmf/detail/: SigMfDatatype.hpp  SigMfDatetime.hpp  SigMfDecode.hpp  SigMfTagMap.hpp  SigMfTagSchedule.hpp
blocks/sigmf/test/: CMakeLists.txt  meson.build  qa_SigMfMetadata.cpp  qa_SigMfSource.cpp
blocks/sigmf/test/assets/: invalid_capture_datetime.sigmf-meta  tiny.sigmf-meta  tiny_rf32.sigmf-meta  wrong_dtype.sigmf-meta
blocks/soapysdr/: CMakeLists.txt  meson.build
blocks/soapysdr/apps/: meson.build  soapy_capture.cpp
blocks/soapysdr/include/gnuradio-4.0/soapysdr/: SoapyRx.hpp
blocks/zeromq/: CMakeLists.txt  gnuradio4-zeromq-headers.pc.in  meson.build
blocks/zeromq/docs/: README.md
blocks/zeromq/examples/: CMakeLists.txt  ExampleHelpers.hpp  gr3_zmq_tag_loopback.py  meson.build  zmq_loopback.cpp  zmq_pmt_payload.cpp  zmq_pub_sub.cpp  zmq_push_pull.cpp  zmq_req_rep.cpp
blocks/zeromq/include/gnuradio-4.0/zeromq/: ZmqPubSink.hpp  ZmqPullSource.hpp  ZmqPushSink.hpp  ZmqRepSink.hpp  ZmqReqSource.hpp  ZmqSubSource.hpp  trait_helpers.hpp
blocks/zeromq/include/gnuradio-4.0/zeromq/detail/: ZmqCommon.hpp  ZmqTagHeaders.hpp
blocks/zeromq/test/: CMakeLists.txt  meson.build  qa_ZmqBlocks.cpp  qa_ZmqInterop.cpp  qa_ZmqInterop_peer.py  qa_ZmqPushPull.cpp
cmake/: Dependencies.cmake  PluginHelpers.cmake  gr4_incubator_stdfloat_compat.hpp
docker/: Dockerfile  Dockerfile.buildenv  Dockerfile.gr3
examples/: CMakeLists.txt  README.md  fm_demodulator.cpp  fm_demodulator_cli.cpp  fm_demodulator_imgui.cpp  meson.build
examples/gr3_flowgraphs/: fm_uhd.grc  top_block.py
schedulers/: CMakeLists.txt  blocking_backoff_plugin.cpp
schedulers/include/gnuradio-4.0/scheduler/: BlockingBackoff.hpp
schedulers/test/: CMakeLists.txt  qa_BlockingBackoff.cpp
subprojects/: .gitignore  pmt_converter.wrap
tools/block-schema-lint/: CMakeLists.txt  README.md  scan_blocks.py
tools/block-schema-lint/schemas/: block_descriptor.cue
